--- a/_teaching/EE6106.md
+++ b/_teaching/EE6106.md
@@ -4,7 +4,7 @@ collection: teaching
 type: "Graduate Course"
 permalink: /teaching/EE6106
 venue: "IIT Bombay, Electrical Engineering (EE) Department"
-date: 2015-01-01
+date: 2024
 location: "Mumbai, India"
 ---
 
