taship changed a bit

--- a/_teaching/EE6106.md
+++ b/_teaching/EE6106.md
@@ -8,4 +8,4 @@ date: 2024-01-01
 location: "Mumbai, India"
 ---
 
-In my last semester at IIT Bombay, I TA'ed a graduate courses comprising of 60+ students under the supervision of [Prof. Jayakrishnan Nair](https://www.ee.iitb.ac.in/~jayakrishnan.nair/), EE, IITB. The duties involved grading the assignments, mid-term and end-term examinations!
+In my last semester at IIT Bombay, I TA'ed a graduate course comprising of 60+ students under the supervision of [Prof. Jayakrishnan Nair](https://www.ee.iitb.ac.in/~jayakrishnan.nair/), EE, IITB. The duties involved grading the assignments, mid-term and end-term examinations!
